[package]
name = "minimal_vst_gain"
version = "0.1.0"
edition = "2021"
authors = [""]

description = "A simple gain plugin with an egui GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
atomic_float = "0.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[workspace]
members = ["xtask"]
